--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.gitignore.io/api/node,macos,windows,eclipse,intellij,notepadpp,sublimetext,visualstudiocode
+
+
+Salt.java
