--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
-
-
 server.port = 5000
+
+#spring.h2.console.enabled=true
+#spring.h2.console.settings.web-allow-others=true
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${RDS_HOSTNAME:localhost}:${RDS_PORT:3306}/${RDS_DB_NAME:recipe-planner}
+spring.datasource.username=${RDS_USERNAME:root}
+spring.datasource.password=${RDS_PASSWORD}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
