--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,8 @@ server.port = 5000
 #spring.h2.console.settings.web-allow-others=true
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${RDS_HOSTNAME:localhost}:${RDS_PORT:3306}/${RDS_DB_NAME:recipe-planner}
+spring.datasource.url=jdbc:mysql://${RDS_HOSTNAME:localhost}:${RDS_PORT:3306}/${RDS_DB_NAME:recipe_planner}
 spring.datasource.username=${RDS_USERNAME:root}
-spring.datasource.password=${RDS_PASSWORD}
+spring.datasource.password=${RDS_PASSWORD:Asdflkjh1!}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
